k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: events-api
  template:
    metadata:
      labels:
        app: events-api
    spec:
      containers:
        - name: events-api
          image: events-api:kubernetes
          ports:
            - containerPort: 5000
