k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: events-service
spec:
  selector:
    app: events-api
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
